--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 }
 .section4 p{
    
-    color: grey;
+    color: blue;
     margin-top: 5px;
     margin-bottom: 5px;
 }
@@ -156,4 +156,5 @@ background-color: #ff5757;
         </div>
     </section>
 </body>
+
 </html>
